# ai-budget-pacer

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml
pacer/: __init__.py  tracker.py
tests/: test_tracker.py
